# overmind

./: .gitattributes  .gitignore  CLAUDE.md  README.md
server/: pyproject.toml
server/data/repos/github.com_overmind_demo/events/agent_1/: 2026-03-26.jsonl
server/data/repos/github.com_overmind_demo/events/dev_a/: 2026-03-26.jsonl
server/data/repos/github.com_overmind_demo/events/dev_b/: 2026-03-26.jsonl
server/data/repos/github.com_test_demo/events/dev_a/: 2026-03-26.jsonl
server/overmind/: __init__.py  api.py  main.py  mcp_server.py  models.py  store.py  summary.py
server/overmind/dashboard/: __init__.py
server/overmind/dashboard/static/: app.js  index.html  style.css
server/scripts/: db_cleanup.py  run_server.bat  run_server.ps1  run_server.sh
server/tests/: conftest.py  test_api.py  test_mcp.py  test_models.py  test_nightmare_scaffold.py  test_store.py  test_summary.py
server/tests/fixtures/: ab_runner.py  scaffold_hive.py  server_helpers.py
server/tests/fixtures/ab_scaffolds/: __init__.py  branch_conflict.py  complex.py  microservices.py  multistage.py  nightmare.py  simple.py  test_branch_conflict.py  test_microservices.py
server/tests/scenarios/: analyze_ab_jsonl.py  crosstest.py  run_ab_parallel.sh  run_live_agents.py  test_cycle.py  test_e2e_server.py  test_hooks_e2e.py  test_live_agents.py  test_live_agents_AB.py  test_live_agents_AB_complex.py  test_live_agents_AB_multistage.py  test_live_agents_AB_statistical.py  test_multi_agent_sim.py  test_scenario_multi_repo.py  test_scenario_polymorphism.py  test_scenario_preemptive_block.py
(+53 files in other folders)
