[project]
name = "overmind-server"
version = "0.1.0"
description = "Overmind: distributed memory sync server for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["overmind"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
