[project]
name = "overmind-server"
version = "0.1.0"
description = "Overmind: distributed memory sync server for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "fastmcp>=2.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["overmind"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "e2e_live: requires real Claude CLI, run manually only",
    "multi_agent: multi-agent simulation tests",
]
addopts = "-m 'not e2e_live'"
